Fixes Text being cut off in the filter field only in NHM dev environment.

--- a/ui.apps/src/main/content/jcr_root/etc/designs/nhmwww/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/designs/nhmwww/css/styles.css
@@ -6128,7 +6128,7 @@ h6 {
 }
 .event--calendar--wrapper .calendar--select select {
   background-image: url(../../../../../etc/designs/nhmwww/img/icons/directory-search-dropdown-arrow.png);
-  padding: 0.5rem 0.5rem 0.3rem;
+  padding: 0.5rem 0.5rem 0.2rem;
 }
 .event--calendar--wrapper .reset--filter {
   font-family: Arial;
